# nautilus

./: .gitignore  README.md  mlruns.db  pyproject.toml  requirements.txt
.cursor/rules/: cursorrules.mdc
binance/: README.md  pyproject.toml
gold/: README.md  auto_tuning_system.py  main.py  mlruns.db  requirements.txt  start_mlflow_ui.sh  tf_compat.py
gold/analysis/: correlation_analysis.py  gold_data_manager.py  gold_prediction_model.py
gold/data/: gold_correlation_matrix.csv  gold_data.csv  recommended_features_correlation.csv
gold/mlruns/0/: meta.yaml
gold/mlruns/558760942712365787/: meta.yaml
gold/results/: prediction_results.txt
mlruns/0/: meta.yaml
nautilus_app/: __init__.py  binance_client.py  cli.py  config.py
